# en

./: .gitignore  BOARD_DEPLOY_SERIAL.md  CMakeLists.txt  Dockerfile  HARDWARE_CHECKLIST.md  M2B1_LIFTED_LOW_SPEED_LIVE_TEST_CHECKLIST.md  M2B1_SOFTWARE_MOTION_TRANSPORT_CONTRACT.md  SENSOR_ERROR_BUDGET.md  TOF_REQUIREMENTS.md  active_scan_command_planner.hpp  active_scan_manager.hpp  app.hpp  bl4820_motion_safety_executor.hpp  common.hpp  compose.yaml  config.board_sim_spin_scan_smoke.yaml  config.hpp  config.hw_v1_5_smoke.yaml  config.hw_yaw_candidate.yaml  config.sim.yaml  config_motion_execution.hpp  grid.hpp  localizer.hpp  loopback_software_motion_transport.hpp  main.cpp  manual_motion_arm_gate.hpp  map_quality.hpp  mapping_supervisor.hpp  metrics.hpp  motion_command_writer.hpp  motion_hardware_preflight.hpp  motion_write_controller.hpp  sensors.hpp  software_direction_speed_motion_command_writer.hpp  software_motion_command.hpp  software_motion_metrics_writer.hpp  software_motion_transport.hpp  sparse_scan_collector.hpp  sparse_scan_yaw_matcher.hpp  spin_scan_localization.hpp  (+28 more)
config/: config.board_sim_spin_scan_smoke.yaml  config.hw_v1_5_smoke.yaml  config.hw_yaw_candidate.yaml  config.sim.yaml  sparse_sim_autonomous_exploration.yaml  sparse_sim_lost_recovery.yaml  sparse_sim_startup_relocalization.yaml  stop_go_left_wall_follow_sim.yaml  stop_go_rectangle_sim.yaml  stop_go_single_corner_sim.yaml  stop_go_straight_wall_sim.yaml
docs/: ALGORITHM_MOTION_API.md  AUTONOMOUS_SLAM_E2E_ACCEPTANCE_TESTS.md  AUTONOMOUS_SLAM_E2E_PRELIVE_SCENARIO.md  AUTONOMOUS_SLAM_E2E_TO_LIVE_HANDOFF.md  BOARD_DEPLOY_SERIAL.md  DETERMINISTIC_SLAM_BACKEND_SKELETON.md  FAKE_AUTONOMOUS_SLAM_PRODUCT_ACCEPTANCE.md  FAKE_MAP_ARTIFACT_CONTRACT.md  FAKE_MAP_SAVE_LOAD_ACCEPTANCE_TESTS.md  FAKE_MAP_TO_RELOCALIZATION_PIPELINE.md  FAKE_RELOCALIZATION_CONTRACT.md  FAKE_TO_REAL_ADAPTER_REPLACEMENT_PLAN.md  FAKE_TO_REAL_REPLACEMENT_MANIFEST.md  FULL_AUTONOMOUS_SLAM_FAKE_PIPELINE.md  FULL_AUTONOMOUS_SLAM_PIPELINE_ACCEPTANCE_TESTS.md  FULL_PIPELINE_TRACE_AND_PHASE_AWARE_REPLAY.md  HARDWARE_CHECKLIST.md  HARDWARE_READY_AUTONOMOUS_SLAM_CORE.md  LIVE_HANDOFF_READINESS_CHECKLIST.md  M2B1_LIFTED_LOW_SPEED_LIVE_TEST_CHECKLIST.md  M2B1_SOFTWARE_MOTION_TRANSPORT_CONTRACT.md  M3C3_1_REAL_PROTOCOL_ALIGNMENT.md  M3C4_SCALAR_MULTI_TOF_FAKE_PIPELINE.md  M3D0_CLOSED_LOOP_2D_SIMULATION.md  M3D11_RUNTIME_SPARSE_SLAM_WIRING.md  M3D1B0_WHEEL_IMU_DEAD_RECKONING.md  M3D1_SPARSE_THREE_TOF_OCCUPANCY_BACKEND.md  M3D2A0_UNIFIED_SPARSE_SLAM_INITIALIZATION_FRAMES_TIMED_POSE.md  M3D2A1_PHASE_AWARE_ACTIVE_MULTI_TOF_OBSERVATION_BUNDLE.md  M3D2B0_IMMUTABLE_REFERENCE_MAP_AND_MATCHER_CONTRACTS.md  M3D2B1_BOUNDED_YAW_ONLY_LOCAL_MATCHER.md  M3D2C_ATOMIC_CORRECTION_KEYFRAME_COMMIT.md  M3D2_SPARSE_TOF_LOCAL_MATCHING_AND_KEYFRAMES.md  M3D3A_FULL_TOF_EXTRINSICS_AND_SPARSE_MAP_LIFECYCLE.md  M3D3B_RELOCALIZATION_AND_RECOVERY.md  M3E1_EXPLORATION_QUALITY.md  M3E_SIMULATION_AUTONOMOUS_EXPLORATION.md  MULTI_TOF_ACCEPTANCE_TESTS.md  MULTI_TOF_DEGRADATION_POLICY.md  MULTI_TOF_MOUNTING_AND_FRAME_IDS.md  (+51 more)
include/robot_slamd/active_scan/: active_scan_command_planner.hpp  active_scan_manager.hpp  sparse_scan_collector.hpp  sparse_scan_yaw_matcher.hpp  yaw_correction_apply.hpp  yaw_correction_gate.hpp  yaw_correction_post_apply_validator.hpp
include/robot_slamd/app/: app.hpp  robot_slam_application.hpp  robot_slam_application_adapters.hpp  robot_slam_motion_boundary.hpp
include/robot_slamd/autonomy/: autonomous_slam_coordinator.hpp  autonomous_slam_fake_ports.hpp  autonomous_slam_policy.hpp  autonomous_slam_types.hpp
include/robot_slamd/config/: config.hpp  config_motion_execution.hpp
include/robot_slamd/core/: common.hpp  grid.hpp  metrics.hpp  software_motion_metrics_writer.hpp
include/robot_slamd/exploration/: autonomous_exploration_controller.hpp  bounded_astar.hpp  frontier_failure_memory.hpp  navigation_grid_view.hpp  safe_waypoint_tracker.hpp  sparse_frontier_planner.hpp
include/robot_slamd/mapping/: left_wall_line_estimator.hpp  localizer.hpp  map_quality.hpp  mapping_supervisor.hpp  spin_scan_localization.hpp  stop_go_mapping_controller.hpp
src/: main.cpp
tests/: m3d2a1_runtime_test_helpers.hpp  m3d2b0_runtime_test_helpers.hpp  m3d2c_runtime_test_helpers.hpp  m3e_exploration_test_helpers.hpp  sparse_map_artifact_test_helpers.hpp  sparse_navigation_test_helpers.hpp  sparse_reference_snapshot_test_helpers.hpp  sparse_tof_d2_pipeline_helpers.hpp  sparse_tof_d2_test_helpers.hpp  sparse_tof_local_match_test_helpers.hpp  sparse_tof_yaw_match_test_helpers.hpp  stop_go_left_wall_test_helpers.hpp  stop_go_rectangle_test_helpers.hpp  stop_go_single_corner_test_helpers.hpp  test_active_multi_tof_observation_bundle.cpp  test_active_multi_tof_observation_bundle_limits.cpp  test_active_multi_tof_observation_bundle_yaw_coverage.cpp  test_active_multi_tof_observation_types.cpp  test_active_scan_command_planner.cpp  test_active_scan_manager.cpp  test_algorithm_motion_command.cpp  test_algorithm_motion_command_adapter.cpp  test_algorithm_motion_command_builder.cpp  test_algorithm_motion_config.cpp  test_algorithm_motion_facade.cpp  test_application_mode_config.cpp  test_autonomous_slam_coordinator.cpp  test_autonomous_slam_e2e_failure_modes.cpp  test_autonomous_slam_e2e_prelive_runner.cpp  test_autonomous_slam_e2e_report_writer.cpp  test_autonomous_slam_e2e_scenario_builder.cpp  test_autonomous_slam_e2e_scenario_types.cpp  test_autonomous_slam_fake_ports.cpp  test_autonomous_slam_policy.cpp  test_autonomous_slam_types.cpp  test_bl4820_motion_safety_executor.cpp  test_bl4820_timestamp_semantics.cpp  test_cjc_bl4820.cpp  test_corner_candidate_confirmation.cpp  test_corner_clearance_trigger_geometry.cpp  (+292 more)
tools/: analyze_candidate_yaw.py  analyze_spin_scan.py  board_runtime_profile_smoke.sh  board_summarize_runtime_profile.sh  preview_map.py  run_board_runtime_smoke.py  run_csv_smoke.py  run_spin_scan_csv_scenarios.py  run_tof_correction_smoke.py  run_yaw_candidate_csv_scenarios.py  summarize_run.py  summarize_runtime_profile.py
(+190 files in other folders)
