cmake_minimum_required(VERSION 3.10)
project(robot_slamd CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(robot_slamd src/main.cpp)
target_include_directories(robot_slamd PRIVATE include)
target_link_libraries(robot_slamd m dl)

enable_testing()

function(add_robot_slamd_test name)
  add_executable(${name} tests/${name}.cpp)
  target_include_directories(${name} PRIVATE include tests)
  target_link_libraries(${name} m dl)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

add_robot_slamd_test(test_cjc_bl4820)
add_robot_slamd_test(test_map_quality)
add_robot_slamd_test(test_mapping_supervisor)
add_robot_slamd_test(test_active_scan_manager)
add_robot_slamd_test(test_active_scan_command_planner)
add_robot_slamd_test(test_sparse_scan_collector)
add_robot_slamd_test(test_sparse_scan_yaw_matcher)
add_robot_slamd_test(test_yaw_correction_gate)
add_robot_slamd_test(test_yaw_correction_apply)
add_robot_slamd_test(test_yaw_correction_post_apply_validator)
add_robot_slamd_test(test_startup_lost_recovery_manager)
add_robot_slamd_test(test_bl4820_motion_safety_executor)
add_robot_slamd_test(test_motion_command_writer)
add_robot_slamd_test(test_software_motion_command)
add_robot_slamd_test(test_fake_software_motion_transport)
add_robot_slamd_test(test_software_direction_speed_motion_command_writer)
add_robot_slamd_test(test_motion_hardware_preflight)
add_robot_slamd_test(test_manual_motion_arm_gate)
add_robot_slamd_test(test_loopback_software_motion_transport)
add_robot_slamd_test(test_m2b1_preflight_config)
add_robot_slamd_test(test_refactor_include_boundaries)
add_robot_slamd_test(test_algorithm_motion_command)
add_robot_slamd_test(test_algorithm_motion_command_builder)
add_robot_slamd_test(test_algorithm_motion_command_adapter)
add_robot_slamd_test(test_algorithm_motion_facade)
add_robot_slamd_test(test_algorithm_motion_config)
add_robot_slamd_test(test_software_motion_transport_contract_checker)
add_robot_slamd_test(test_software_motion_shadow_adapter)
add_robot_slamd_test(test_software_transport_acceptance_runner)
add_robot_slamd_test(test_m2b3_software_transport_contract_config)
add_robot_slamd_test(test_autonomous_slam_types)
add_robot_slamd_test(test_robot_slam_ports)
add_robot_slamd_test(test_autonomous_slam_policy)
add_robot_slamd_test(test_autonomous_slam_coordinator)
add_robot_slamd_test(test_autonomous_slam_fake_ports)
add_robot_slamd_test(test_m3a0_hardware_ready_autonomous_slam_config)
add_robot_slamd_test(test_real_adapter_contract_types)
add_robot_slamd_test(test_real_adapter_contract_checker)
add_robot_slamd_test(test_real_adapter_readiness_checker)
add_robot_slamd_test(test_real_adapter_acceptance_runner)
add_robot_slamd_test(test_replay_robot_slam_adapters)
add_robot_slamd_test(test_m3a1_real_adapter_contract_config)
