cmake_minimum_required(VERSION 3.10)
project(robot_slamd CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(robot_slamd src/main.cpp)
target_include_directories(robot_slamd PRIVATE include)
target_link_libraries(robot_slamd m dl)

enable_testing()

function(add_robot_slamd_test name)
  add_executable(${name} tests/${name}.cpp)
  target_include_directories(${name} PRIVATE include tests)
  target_link_libraries(${name} m dl)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

add_robot_slamd_test(test_cjc_bl4820)
add_robot_slamd_test(test_map_quality)
add_robot_slamd_test(test_mapping_supervisor)
add_robot_slamd_test(test_active_scan_manager)
add_robot_slamd_test(test_active_scan_command_planner)
add_robot_slamd_test(test_sparse_scan_collector)
add_robot_slamd_test(test_sparse_scan_yaw_matcher)
add_robot_slamd_test(test_yaw_correction_gate)
add_robot_slamd_test(test_yaw_correction_apply)
add_robot_slamd_test(test_yaw_correction_post_apply_validator)
add_robot_slamd_test(test_startup_lost_recovery_manager)
add_robot_slamd_test(test_bl4820_motion_safety_executor)
add_robot_slamd_test(test_motion_command_writer)
add_robot_slamd_test(test_software_motion_command)
add_robot_slamd_test(test_fake_software_motion_transport)
add_robot_slamd_test(test_software_direction_speed_motion_command_writer)
add_robot_slamd_test(test_motion_hardware_preflight)
add_robot_slamd_test(test_manual_motion_arm_gate)
add_robot_slamd_test(test_loopback_software_motion_transport)
add_robot_slamd_test(test_m2b1_preflight_config)
add_robot_slamd_test(test_refactor_include_boundaries)
add_robot_slamd_test(test_algorithm_motion_command)
add_robot_slamd_test(test_algorithm_motion_command_builder)
add_robot_slamd_test(test_algorithm_motion_command_adapter)
add_robot_slamd_test(test_algorithm_motion_facade)
add_robot_slamd_test(test_algorithm_motion_config)
add_robot_slamd_test(test_software_motion_transport_contract_checker)
add_robot_slamd_test(test_software_motion_shadow_adapter)
add_robot_slamd_test(test_software_transport_acceptance_runner)
add_robot_slamd_test(test_m2b3_software_transport_contract_config)
add_robot_slamd_test(test_autonomous_slam_types)
add_robot_slamd_test(test_robot_slam_ports)
add_robot_slamd_test(test_autonomous_slam_policy)
add_robot_slamd_test(test_autonomous_slam_coordinator)
add_robot_slamd_test(test_autonomous_slam_fake_ports)
add_robot_slamd_test(test_m3a0_hardware_ready_autonomous_slam_config)
add_robot_slamd_test(test_real_adapter_contract_types)
add_robot_slamd_test(test_real_adapter_contract_checker)
add_robot_slamd_test(test_real_adapter_readiness_checker)
add_robot_slamd_test(test_real_adapter_acceptance_runner)
add_robot_slamd_test(test_replay_robot_slam_adapters)
add_robot_slamd_test(test_m3a1_real_adapter_contract_config)
add_robot_slamd_test(test_prelive_autonomous_slam_types)
add_robot_slamd_test(test_prelive_autonomous_slam_gate)
add_robot_slamd_test(test_prelive_autonomous_slam_runner)
add_robot_slamd_test(test_prelive_autonomous_slam_report_writer)
add_robot_slamd_test(test_prelive_autonomous_slam_failure_modes)
add_robot_slamd_test(test_m3a2_prelive_autonomous_slam_config)
add_robot_slamd_test(test_slam_backend_types)
add_robot_slamd_test(test_slam_backend_contract_checker)
add_robot_slamd_test(test_slam_backend_binding_adapter)
add_robot_slamd_test(test_slam_backend_acceptance_runner)
add_robot_slamd_test(test_replay_slam_backend_binding)
add_robot_slamd_test(test_m3a3_slam_backend_map_port_config)
add_robot_slamd_test(test_autonomous_slam_e2e_scenario_types)
add_robot_slamd_test(test_autonomous_slam_e2e_scenario_builder)
add_robot_slamd_test(test_autonomous_slam_e2e_prelive_runner)
add_robot_slamd_test(test_autonomous_slam_e2e_report_writer)
add_robot_slamd_test(test_autonomous_slam_e2e_failure_modes)
add_robot_slamd_test(test_m3a4_autonomous_slam_e2e_config)
add_robot_slamd_test(test_real_adapter_stub_types)
add_robot_slamd_test(test_real_tof_imu_wheel_sensor_port_stub)
add_robot_slamd_test(test_real_software_motion_port_stub)
add_robot_slamd_test(test_real_slam_backend_binding_stub)
add_robot_slamd_test(test_real_adapter_factory)
add_robot_slamd_test(test_live_handoff_readiness_checker)
add_robot_slamd_test(test_m3b0_real_adapter_stubs_config)
add_robot_slamd_test(test_real_sensor_data_contract_types)
add_robot_slamd_test(test_real_sensor_data_contract_checker_tof)
add_robot_slamd_test(test_real_sensor_data_contract_checker_imu_wheel)
add_robot_slamd_test(test_real_sensor_snapshot_builder)
add_robot_slamd_test(test_real_sensor_adapter_acceptance_runner)
add_robot_slamd_test(test_real_sensor_adapter_report_writer)
add_robot_slamd_test(test_m3b1_real_sensor_adapter_data_contract_config)
add_robot_slamd_test(test_real_sensor_replay_types)
add_robot_slamd_test(test_real_sensor_replay_log_codec)
add_robot_slamd_test(test_real_sensor_replay_port)
add_robot_slamd_test(test_real_sensor_replay_acceptance_runner)
add_robot_slamd_test(test_real_sensor_replay_report_writer)
add_robot_slamd_test(test_m3b2_real_sensor_replay_config)
add_robot_slamd_test(test_real_sensor_replay_robust_codec)
add_robot_slamd_test(test_real_sensor_replay_port_error_handling)
add_robot_slamd_test(test_real_sensor_replay_time_modes)
add_robot_slamd_test(test_real_sensor_replay_regression_runner)
add_robot_slamd_test(test_real_sensor_replay_regression_report_writer)
add_robot_slamd_test(test_m3b21_real_sensor_replay_robustness_config)
add_robot_slamd_test(test_deterministic_slam_backend_types)
add_robot_slamd_test(test_deterministic_tof_scan_evaluator)
add_robot_slamd_test(test_deterministic_map_quality_tracker)
add_robot_slamd_test(test_deterministic_slam_backend_binding_update)
add_robot_slamd_test(test_deterministic_slam_backend_binding_failure_modes)
add_robot_slamd_test(test_replay_to_slam_backend_regression_runner)
add_robot_slamd_test(test_deterministic_slam_backend_report_writer)
add_robot_slamd_test(test_m3b3_deterministic_slam_backend_config)
add_robot_slamd_test(test_full_autonomous_slam_pipeline_types)
add_robot_slamd_test(test_full_autonomous_slam_scenario_builder)
add_robot_slamd_test(test_full_autonomous_slam_fake_motion_port)
add_robot_slamd_test(test_full_autonomous_slam_runner_success)
add_robot_slamd_test(test_full_autonomous_slam_runner_failure_modes)
add_robot_slamd_test(test_full_autonomous_slam_report_writer)
add_robot_slamd_test(test_m3b4_full_autonomous_slam_pipeline_config)
add_robot_slamd_test(test_fake_map_artifact_types)
add_robot_slamd_test(test_fake_map_storage)
add_robot_slamd_test(test_fake_map_report_writer)
add_robot_slamd_test(test_full_autonomous_slam_pipeline_trace)
add_robot_slamd_test(test_full_autonomous_slam_runner_phase_aware_replay)
add_robot_slamd_test(test_full_autonomous_slam_runner_fake_map_save)
add_robot_slamd_test(test_m3b5_fake_map_artifact_config)
add_robot_slamd_test(test_fake_relocalization_types)
add_robot_slamd_test(test_fake_relocalization_binding)
add_robot_slamd_test(test_fake_map_relocalization_runner_success)
add_robot_slamd_test(test_fake_map_relocalization_runner_failure_modes)
add_robot_slamd_test(test_fake_relocalization_report_writer)
add_robot_slamd_test(test_m3b6_fake_relocalization_config)
add_robot_slamd_test(test_fake_relocalization_runner_strict_thresholds)
add_robot_slamd_test(test_fake_relocalization_readiness_gate)
add_robot_slamd_test(test_fake_to_real_adapter_replacement_manifest)
add_robot_slamd_test(test_fake_autonomous_slam_product_acceptance_runner)
add_robot_slamd_test(test_fake_autonomous_slam_product_acceptance_failure_modes)
add_robot_slamd_test(test_fake_autonomous_slam_product_acceptance_report_writer)
add_robot_slamd_test(test_m3b7_fake_product_acceptance_config)
add_robot_slamd_test(test_multi_tof_contract_types)
add_robot_slamd_test(test_multi_tof_mount_config)
add_robot_slamd_test(test_multi_tof_contract_checker_valid)
add_robot_slamd_test(test_multi_tof_contract_checker_failure_modes)
add_robot_slamd_test(test_multi_tof_acceptance_runner)
add_robot_slamd_test(test_multi_tof_report_writer)
add_robot_slamd_test(test_m3c0_multi_tof_config)
add_robot_slamd_test(test_multi_tof_effective_time_policy)
add_robot_slamd_test(test_multi_tof_degradation_policy)
add_robot_slamd_test(test_multi_tof_sync_checker_valid)
add_robot_slamd_test(test_multi_tof_sync_checker_pairwise_failures)
add_robot_slamd_test(test_multi_tof_sync_checker_imu_wheel_failures)
add_robot_slamd_test(test_multi_tof_sync_acceptance_runner)
add_robot_slamd_test(test_multi_tof_sync_report_writer)
add_robot_slamd_test(test_m3c1_multi_tof_sync_config)
add_robot_slamd_test(test_multi_tof_snapshot_types)
add_robot_slamd_test(test_multi_tof_snapshot_builder_valid)
add_robot_slamd_test(test_multi_tof_snapshot_builder_failure_modes)
add_robot_slamd_test(test_multi_tof_snapshot_builder_legacy_primary)
add_robot_slamd_test(test_multi_tof_snapshot_acceptance_runner)
add_robot_slamd_test(test_multi_tof_snapshot_report_writer)
add_robot_slamd_test(test_m3c2_multi_tof_snapshot_config)
add_robot_slamd_test(test_multi_tof_replay_log_codec_valid)
add_robot_slamd_test(test_multi_tof_replay_log_codec_failure_modes)
add_robot_slamd_test(test_multi_tof_replay_port)
add_robot_slamd_test(test_multi_tof_replay_to_snapshot_regression)
add_robot_slamd_test(test_multi_tof_replay_acceptance_runner)
add_robot_slamd_test(test_multi_tof_replay_report_writer)
add_robot_slamd_test(test_m3c3_multi_tof_replay_config)
